<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/display_settings_title">

    <com.android.settingslib.widget.LayoutPreference
        android:key="creator_mode_preview"
        android:layout="@layout/creator_mode_preview"
        android:selectable="false" />

    <PreferenceCategory
        android:key="display_cm_header_category"
        app:iconSpaceReserved="false"
        app:title="@string/display_cm_header">

        <SwitchPreferenceCompat
            app:key="switchCreatorMode"
            app:iconSpaceReserved="false"
            app:title="@string/display_cm_enable"
            app:summary="@string/display_cm_summary" />

        <ListPreference
            android:icon="@drawable/ic_preset"
            android:enabled="false"
            android:entries="@array/white_balance_profile_entry"
            android:title="@string/white_balance_profile_title"
            android:key="white_balance_switch"
            android:summary="%s"
            android:entryValues="@array/white_balance_profile_values"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="motion_blur_reduction"
            app:summary="@string/motion_blur_reduction_summary"
            app:title="@string/motion_blur_reduction_title"/>

    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="display_setting_footer"
        android:title="@string/display_settings_footer"
        android:selectable="false" />

</PreferenceScreen>
